--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
  
 ```
 
-# aorsf <a href="https://bcjaeger.github.io/aorsf/"><img src="man/figures/logo.png" align="right" height="138" /></a>
+# aorsf <a href="https://docs.ropensci.org/aorsf/"><img src="man/figures/logo.png" align="right" height="138" /></a>
 
 
 
@@ -24,9 +24,9 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 [![Project Status: Active – The project has reached a stable, usable state and is being actively developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
   [![Codecov test coverage](https://codecov.io/gh/bcjaeger/aorsf/branch/master/graph/badge.svg)](https://app.codecov.io/gh/bcjaeger/aorsf?branch=master)
-[![R-CMD-check](https://github.com/bcjaeger/aorsf/workflows/R-CMD-check/badge.svg)](https://github.com/bcjaeger/aorsf/actions/)
+[![R-CMD-check](https://github.com/bcjaeger/aorsf/workflows/R-CMD-check/badge.svg)](https://github.com/ropensci/aorsf/actions/)
 [![Status at rOpenSci Software Peer Review](https://badges.ropensci.org/532_status.svg)](https://github.com/ropensci/software-review/issues/532/)
-<a href="https://joss.theoj.org/papers/414871f081cd8449007d671a7f7f7c3a"><img src="https://joss.theoj.org/papers/414871f081cd8449007d671a7f7f7c3a/status.svg"></a>
+<a href="https://joss.theoj.org/papers/10.21105/joss.04705"><img src="https://joss.theoj.org/papers/10.21105/joss.04705/status.svg"></a>
 [![CRAN status](https://www.r-pkg.org/badges/version/aorsf)](https://CRAN.R-project.org/package=aorsf)
 [![DOI](https://zenodo.org/badge/394311897.svg)](https://zenodo.org/badge/latestdoi/394311897)
 <!-- badges: end -->
@@ -94,9 +94,9 @@ fit
 
 ```
 
-- See [print.orsf_fit](https://bcjaeger.github.io/aorsf/reference/print.orsf_fit.html) for a description of each line in the printed output.
+- See [print.orsf_fit](https://docs.ropensci.org/aorsf/reference/print.orsf_fit.html) for a description of each line in the printed output.
 
-- See [orsf examples](https://bcjaeger.github.io/aorsf/reference/orsf.html#examples) for more details on controlling ORSF ensemble fits and using them in prediction modeling workflows.
+- See [orsf examples](https://docs.ropensci.org/aorsf/reference/orsf.html#examples) for more details on controlling ORSF ensemble fits and using them in prediction modeling workflows.
 
 ### Variable importance
 
@@ -126,20 +126,20 @@ The importance of individual variables can be estimated in three ways using `aor
   
   ```
 
-You can supply your own R function to estimate out-of-bag error when using negation or permutation importance. This feature is experimental and may be changed in the future (see [oob vignette](https://bcjaeger.github.io/aorsf/articles/oobag.html))
+You can supply your own R function to estimate out-of-bag error when using negation or permutation importance. This feature is experimental and may be changed in the future (see [oob vignette](https://docs.ropensci.org/aorsf/articles/oobag.html))
 
 ### Partial dependence (PD) 
 
 `r aorsf:::roxy_pd_explain()`
 
-For more on PD, see the [vignette](https://bcjaeger.github.io/aorsf/articles/pd.html)
+For more on PD, see the [vignette](https://docs.ropensci.org/aorsf/articles/pd.html)
 
 ### Individual conditional expectations (ICE)
 
 `r aorsf:::roxy_ice_explain()`
 
 
-For more on ICE, see the [vignette](https://bcjaeger.github.io/aorsf/articles/pd.html#individual-conditional-expectations-ice)
+For more on ICE, see the [vignette](https://docs.ropensci.org/aorsf/articles/pd.html#individual-conditional-expectations-ice)
 
 ## Comparison to existing software
 
@@ -155,7 +155,7 @@ Comparisons between `aorsf` and existing software are presented in our [arXiv pa
 
 - reports the probability that each variable importance technique will rank a relevant variable with higher importance than an irrelevant variable.
 
-A more hands-on comparison of `aorsf` and other R packages is provided in [orsf examples](https://bcjaeger.github.io/aorsf/reference/orsf.html#tidymodels)
+A more hands-on comparison of `aorsf` and other R packages is provided in [orsf examples](https://docs.ropensci.org/aorsf/reference/orsf.html#tidymodels)
 
 
 ## References
