--- a/vignettes/aorsf.Rmd
+++ b/vignettes/aorsf.Rmd
@@ -25,7 +25,7 @@ This article covers core features of the `aorsf` package.
 
 The oblique random survival forest (ORSF) is an extension of the axis-based RSF algorithm.
 
-- See [orsf](https://bcjaeger.github.io/aorsf/reference/orsf.html) for more details on ORSFs.
+- See [orsf](https://docs.ropensci.org/aorsf/reference/orsf.html) for more details on ORSFs.
 
 - see the [arXiv](https://arxiv.org/abs/2208.01129) paper for more details on algorithms used specifically by `aorsf`.
 
@@ -94,13 +94,13 @@ orsf_fit <- pbc_orsf |>
 
 `r aorsf:::roxy_pd_explain()`
 
-For more on PD, see the [vignette](https://bcjaeger.github.io/aorsf/articles/pd.html)
+For more on PD, see the [vignette](https://docs.ropensci.org/aorsf/articles/pd.html)
 
 ### Individual conditional expectations (ICE)
 
 `r aorsf:::roxy_ice_explain()`
 
-For more on ICE, see the [vignette](https://bcjaeger.github.io/aorsf/articles/pd.html#individual-conditional-expectations-ice)
+For more on ICE, see the [vignette](https://docs.ropensci.org/aorsf/articles/pd.html#individual-conditional-expectations-ice)
 
 
 ## What about the original ORSF?
