--- a/vignettes/oobag.Rmd
+++ b/vignettes/oobag.Rmd
@@ -18,7 +18,7 @@ knitr::opts_chunk$set(
 
 ```{r setup}
 
-library(aorsf)
+# library(aorsf)
 library(survival)
 library(SurvMetrics)
 
@@ -39,7 +39,7 @@ Let's fit an oblique random survival forest and plot the distribution of the ens
 fit <- orsf(data = pbc_orsf, 
             formula = Surv(time, status) ~ . - id,
             oobag_pred_type = 'surv',
-            oobag_pred_horizon = 3500)
+            oobag_pred_horizon = 2000)
 
 hist(fit$pred_oobag, 
      main = 'Ensemble out-of-bag survival predictions at t=3,500')
@@ -69,7 +69,8 @@ As each out-of-bag data set contains about one-third of the training set, the ou
 fit <- orsf(data = pbc_orsf,
             formula = Surv(time, status) ~ . - id,
             n_tree = 50,
-            oobag_pred_horizon = 3500,
+            oobag_pred_type = 'surv',
+            oobag_pred_horizon = 2000,
             oobag_eval_every = 1)
 
 plot(
@@ -90,7 +91,7 @@ In some cases, you may want more control over how out-of-bag error is estimated.
 
 ```{r}
 
-oobag_fun_brier <- function(y_mat, s_vec){
+oobag_fun_brier <- function(y_mat, w_vec, s_vec){
 
  # output is numeric vector of length 1
  as.numeric(
@@ -98,7 +99,7 @@ oobag_fun_brier <- function(y_mat, s_vec){
    object = Surv(time = y_mat[, 1], event = y_mat[, 2]), 
    pre_sp = s_vec,
    # t_star in Brier() should match oob_pred_horizon in orsf()
-   t_star = 3500
+   t_star = 2000
   )
  )
  
@@ -109,7 +110,7 @@ There are two ways to apply your own function to compute out-of-bag error. First
 
 ```{r}
 
-oobag_fun_brier(y_mat = fit$data[, c('time', 'status')],
+oobag_fun_brier(y_mat = pbc_orsf[,c('time', 'status')],
                 s_vec = fit$pred_oobag)
 
 ```
@@ -120,13 +121,13 @@ Second, you can pass your function into `orsf()`, and it will be used in place o
 
 fit <- orsf(data = pbc_orsf,
             formula = Surv(time, status) ~ . - id,
-            n_tree = 50,
-            oobag_pred_horizon = 3500,
+            n_tree = 500,
+            oobag_pred_horizon = 2000,
             oobag_fun = oobag_fun_brier,
-            oobag_eval_every = 1)
+            oobag_eval_every = 25)
 
 plot(
- x = seq(1, 50, by = 1),
+ x = seq(25, 500, by = 25),
  y = fit$eval_oobag$stat_values, 
  main = 'Out-of-bag error computed after each new tree is grown.',
  sub = 'For the Brier score, lower values indicate more accurate predictions',
@@ -140,13 +141,13 @@ We can also compute a time-dependent C-statistic instead of Harrell's C-statisti
 
 ```{r}
 
-oobag_fun_tdep_cstat <- function(y_mat, s_vec){
+oobag_fun_tdep_cstat <- function(y_mat, w_vec, s_vec){
 
  as.numeric(
   SurvMetrics::Cindex(
    object = Surv(time = y_mat[, 1], event = y_mat[, 2]), 
    predicted = s_vec,
-   t_star = 3500
+   t_star = 2000
   )
  )
 
@@ -155,7 +156,7 @@ oobag_fun_tdep_cstat <- function(y_mat, s_vec){
 fit <- orsf(data = pbc_orsf,
             formula = Surv(time, status) ~ . - id,
             n_tree = 50,
-            oobag_pred_horizon = 3500,
+            oobag_pred_horizon = 2000,
             oobag_fun = oobag_fun_tdep_cstat,
             oobag_eval_every = 1)
 
@@ -210,11 +211,11 @@ Negation importance is based on the out-of-bag error, so of course you may be cu
 ```{r}
 
 fit_tdep_cstat <- orsf(data = pbc_orsf,
-                 formula = Surv(time, status) ~ . - id,
-                 n_tree = 500,
-                 oobag_pred_horizon = 3500,
-                 oobag_fun = oobag_fun_tdep_cstat,
-                 importance = 'negate')
+                       formula = Surv(time, status) ~ . - id,
+                       n_tree = 50,
+                       oobag_pred_horizon = 2000,
+                       oobag_fun = oobag_fun_tdep_cstat,
+                       importance = 'negate')
 
 fit_tdep_cstat$importance
 
