--- a/vignettes/fast.Rmd
+++ b/vignettes/fast.Rmd
@@ -20,27 +20,7 @@ library(aorsf)
 
 ## Go faster
 
-Analyses can slow to a crawl when models need hours to run. In this article you will find a few tricks to prevent this bottleneck when using `orsf()`. We'll use the `flchain` data from `survival` to demonstrate.
-
-```{r}
-
-data("flchain", package = 'survival')
-
-flc <- flchain
-# do this to avoid orsf() throwing an error about time to event = 0
-flc <- flc[flc$futime > 0, ]
-# modify names 
-names(flc)[names(flc) == 'futime'] <- 'time'
-names(flc)[names(flc) == 'death'] <- 'status'
-
-```
-
-Our `flc` data has `r nrow(flc)` rows and `r ncol(flc)` columns:
-
-```{r}
-head(flc)
-```
-
+Analyses can slow to a crawl when models need hours to run. In this article you will find a few tricks to prevent this bottleneck when using `orsf()`.
 
 ## Use `orsf_control_fast()`
 
@@ -50,13 +30,17 @@ This is the default `control` value for `orsf()` and its run-time compared to ot
 ```{r}
 
 time_fast <- system.time(
- expr = orsf(flc, time+status~., na_action = 'na_impute_meanmode',
-             control = orsf_control_fast(), n_tree = 10)
+ expr = orsf(pbc_orsf, 
+             formula = time+status~. -id, 
+             control = orsf_control_fast(), 
+             n_tree = 5)
 )
 
 time_net <- system.time(
- expr = orsf(flc, time+status~., na_action = 'na_impute_meanmode',
-             control = orsf_control_net(), n_tree = 10)
+ expr = orsf(pbc_orsf, 
+             formula = time+status~. -id, 
+             control = orsf_control_net(), 
+             n_tree = 5)
 )
 
 # control_fast() is much faster
@@ -70,25 +54,12 @@ The `n_thread` argument uses multi-threading to run `aorsf` functions in paralle
 
 ```{r}
 
-time_1_thread <- system.time(
- expr = orsf(flc, time+status~., na_action = 'na_impute_meanmode',
-             n_thread = 1, n_tree = 500)
-)
+# automatically pick number of threads based on amount available
 
-time_5_thread <- system.time(
- expr = orsf(flc, time+status~., na_action = 'na_impute_meanmode',
-             n_thread = 5, n_tree = 500)
-)
-
-time_auto_thread <- system.time(
- expr = orsf(flc, time+status~., na_action = 'na_impute_meanmode',
-             n_thread = 0, n_tree = 500)
-)
-
-# 5 threads and auto thread are both about 3 times faster than one thread
-
-time_1_thread['elapsed'] / time_5_thread['elapsed']
-time_1_thread['elapsed'] / time_auto_thread['elapsed']
+orsf(pbc_orsf, 
+     formula = time+status~. -id, 
+     n_tree = 5,
+     n_thread = 0)
 
 ```
 
@@ -112,16 +83,17 @@ Applying these tips:
 
 ```{r}
 
-time_lightweight <- system.time(
- expr = orsf(flc, time+status~., na_action = 'na_impute_meanmode',
-             n_thread = 0, n_tree = 500, n_retry = 0,
-             oobag_pred_type = 'none', importance = 'none',
-             split_min_events = 20, leaf_min_events = 10,
-             split_min_stat = 10)
-)
-
-# about two times faster than auto thread with defaults
-time_auto_thread['elapsed'] / time_lightweight['elapsed']
+orsf(pbc_orsf, 
+     formula = time+status~., 
+     na_action = 'na_impute_meanmode',
+     n_thread = 0, 
+     n_tree = 5, 
+     n_retry = 0,
+     oobag_pred_type = 'none', 
+     importance = 'none',
+     split_min_events = 20, 
+     leaf_min_events = 10,
+     split_min_stat = 10)
 
 ```
 
@@ -133,10 +105,9 @@ Setting `verbose_progress = TRUE` doesn't make anything run faster, but it can h
 
 ```{r}
 
-verbose_fit <- orsf(flc, time+status~., 
-                    na_action = 'na_impute_meanmode',
-                    n_thread = 0, 
-                    n_tree = 500, 
+verbose_fit <- orsf(pbc_orsf, 
+                    formula = time+status~. -id, 
+                    n_tree = 5, 
                     verbose_progress = TRUE)
 
 ```
