--- a/vignettes/oobag.Rmd
+++ b/vignettes/oobag.Rmd
@@ -39,6 +39,7 @@ Let's fit an oblique random survival forest and plot the distribution of the ens
 fit <- orsf(data = pbc_orsf, 
             formula = Surv(time, status) ~ . - id,
             oobag_pred_type = 'surv',
+            n_tree = 5,
             oobag_pred_horizon = 2000)
 
 hist(fit$pred_oobag, 
@@ -68,22 +69,25 @@ As each out-of-bag data set contains about one-third of the training set, the ou
 
 fit <- orsf(data = pbc_orsf,
             formula = Surv(time, status) ~ . - id,
-            n_tree = 50,
+            n_tree = 20,
+            tree_seeds = 2,
             oobag_pred_type = 'surv',
             oobag_pred_horizon = 2000,
             oobag_eval_every = 1)
 
 plot(
- x = seq(1, 50, by = 1),
+ x = seq(1, 20, by = 1),
  y = fit$eval_oobag$stat_values, 
  main = 'Out-of-bag C-statistic computed after each new tree is grown.',
  xlab = 'Number of trees grown',
  ylab = fit$eval_oobag$stat_type
 )
 
+lines(x=seq(1, 20), y = fit$eval_oobag$stat_values)
+
 ```
 
-In general, at least 500 trees are recommended for a random forest fit. We're just using 50 in this case for better illustration of the out-of-bag error curve. Also, it helps to make run-times low whenever I need to re-compile the package vignettes.
+In general, at least 500 trees are recommended for a random forest fit. We're just using 10 for illustration.
 
 ## User-supplied out-of-bag evaluation functions
 
@@ -121,13 +125,14 @@ Second, you can pass your function into `orsf()`, and it will be used in place o
 
 fit <- orsf(data = pbc_orsf,
             formula = Surv(time, status) ~ . - id,
-            n_tree = 50,
+            n_tree = 20,
+            tree_seeds = 2,
             oobag_pred_horizon = 2000,
             oobag_fun = oobag_fun_brier,
             oobag_eval_every = 1)
 
 plot(
- x = seq(1, 50, by = 1),
+ x = seq(1, 20, by = 1),
  y = fit$eval_oobag$stat_values, 
  main = 'Out-of-bag error computed after each new tree is grown.',
  sub = 'For the Brier score, lower values indicate more accurate predictions',
@@ -135,38 +140,7 @@ plot(
  ylab = "Brier score"
 )
 
-```
-
-We can also compute a time-dependent C-statistic instead of Harrell's C-statistic (the default oob function):
-
-```{r}
-
-oobag_fun_tdep_cstat <- function(y_mat, w_vec, s_vec){
-
- as.numeric(
-  SurvMetrics::Cindex(
-   object = Surv(time = y_mat[, 1], event = y_mat[, 2]), 
-   predicted = s_vec,
-   t_star = 2000
-  )
- )
-
-}
-
-fit <- orsf(data = pbc_orsf,
-            formula = Surv(time, status) ~ . - id,
-            n_tree = 50,
-            oobag_pred_horizon = 2000,
-            oobag_fun = oobag_fun_tdep_cstat,
-            oobag_eval_every = 1)
-
-plot(
- x = seq(50),
- y = fit$eval_oobag$stat_values, 
- main = 'Out-of-bag time-dependent AUC\ncomputed after each new tree is grown.',
- xlab = 'Number of trees grown',
- ylab = "AUC at t = 2,000"
-)
+lines(x=seq(1, 20), y = fit$eval_oobag$stat_values)
 
 ```
 
@@ -193,45 +167,16 @@ y_mat <- cbind(time = test_time, status = test_status)
 s_vec <- seq(0.9, 0.1, length.out = 100)
 
 # see 1 in the checklist above
-names(formals(oobag_fun_tdep_cstat)) == c("y_mat", "w_vec", "s_vec")
+names(formals(oobag_fun_brier)) == c("y_mat", "w_vec", "s_vec")
 
-test_output <- oobag_fun_tdep_cstat(y_mat = y_mat, 
-                                    w_vec = w_vec,
-                                    s_vec = s_vec)
+test_output <- oobag_fun_brier(y_mat = y_mat, 
+                               w_vec = w_vec,
+                               s_vec = s_vec)
 
 # test output should be numeric
 is.numeric(test_output)
 # test_output should be a numeric value of length 1
 length(test_output) == 1
-
-```
-
-## User-supplied functions for negation importance.
-
-Negation importance is based on the out-of-bag error, so of course you may be curious about what negation importance would be if it were computed using different statistics. The workflow for doing this is exactly the same as the example above, except for two things:
-
-1. We have to specify `importance = 'negate'` when we fit our model. 
-
-2. We want to use a modified version of the C-stat, specifically 1 - the C-stat, because of how `aorsf` computes variable importance.
-
-```{r}
-oobag_fun_tdep_cstat_inverse <- function(y_mat, w_vec, s_vec){
- 1 - oobag_fun_tdep_cstat(y_mat, w_vec, s_vec)
-}
-```
-
-Also, to speed up computations, I am not going to monitor out-of-bag error here.
-
-```{r}
-
-fit_tdep_cstat <- orsf(data = pbc_orsf,
-                       formula = Surv(time, status) ~ . - id,
-                       n_tree = 100,
-                       oobag_pred_horizon = 2000,
-                       oobag_fun = oobag_fun_tdep_cstat_inverse,
-                       importance = 'negate')
-
-fit_tdep_cstat$importance
 
 ```
 
